--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,11 @@ kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
+org.gradle.parallel=true
+org.gradle.configureondemand=false
+
 android.nonTransitiveRClass=true
+org.gradle.configuration-cache=true
+org.gradle.caching=true
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
