--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,55 +1,55 @@
 [versions]
-accompanist = "0.28.0"
-androidDesugarJdkLibs = "2.0.3"
-androidGradlePlugin = "7.4.2"
-androidxActivity = "1.7.2"
+accompanist = "0.34.0"
+androidDesugarJdkLibs = "2.0.4"
+androidGradlePlugin = "8.3.1"
+androidxActivity = "1.8.2"
 androidxAppCompat = "1.6.1"
-androidxBrowser = "1.4.0"
-androidxComposeBom = "2023.09.01"
-androidxComposeCompiler = "1.4.8"
-androidxComposeMaterial3 = "1.2.0-alpha08"
-androidxComposeMaterial = "1.6.0-alpha06"
-androidxComposeRuntimeTracing = "1.0.0-alpha04"
+androidxBrowser = "1.8.0"
+androidxComposeBom = "2024.03.00"
+androidxComposeCompiler = "1.5.8"
+androidxComposeMaterial3 = "1.2.1"
+androidxComposeMaterial = "1.6.4"
+androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.12.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.1"
-androidxHiltNavigationCompose = "1.0.0"
-androidxLifecycle = "2.6.2"
-androidxMacroBenchmark = "1.1.1"
-androidxMetrics = "1.0.0-alpha04"
-androidxNavigation = "2.7.3"
+androidxHiltNavigationCompose = "1.2.0"
+androidxLifecycle = "2.7.0"
+androidxMacroBenchmark = "1.2.3"
+androidxMetrics = "1.0.0-beta01"
+androidxNavigation = "2.7.7"
 androidxProfileinstaller = "1.2.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
 androidxTestExt = "1.1.5"
 androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.2"
-androidxTracing = "1.1.0"
-androidxUiAutomator = "2.2.0"
-androidxWindowManager = "1.1.0"
+androidxTracing = "1.2.0"
+androidxUiAutomator = "2.3.0"
+androidxWindowManager = "1.2.0"
 androidxWork = "2.7.1"
-coil = "2.3.0"
+coil = "2.6.0"
 firebaseBom = "31.2.0"
-firebaseCrashlyticsPlugin = "2.9.2"
+firebaseCrashlyticsPlugin = "2.9.9"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.3.14"
-hilt = "2.47"
-hiltExt = "1.0.0"
+hilt = "2.51"
+hiltExt = "1.2.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "1.8.22"
+kotlin = "1.9.22"
 kotlinxCoroutines = "1.6.4"
 kotlinxDatetime = "0.4.0"
-kotlinxSerializationJson = "1.5.1"
-ksp = "1.8.22-1.0.11"
+kotlinxSerializationJson = "1.6.3"
+ksp = "1.9.22-1.0.18"
 lint = "30.3.1"
-okhttp = "4.10.0"
+okhttp = "4.12.0"
 protobuf = "3.21.12"
 protobufPlugin = "0.9.3"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
-room = "2.5.2"
+room = "2.6.1"
 secrets = "2.0.1"
 turbine = "0.12.1"
 
